[package]
name = "cosmo"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = "0.28.0"
clap = { version = "4.5.1", features = ["derive"] }
stl_io = "0.8.2"
rayon = "1.10.0"
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3.72", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen-rayon = { version = "1.2", features = ["no-bundler"], optional = true}

[lib]
name = "cosmo"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "cosmo"

[features]
default = ["bin"]
bin = []
# wasm-pack build --target web --features wasm
wasm = ["wasm-bindgen", "js-sys", "console_error_panic_hook"]
wasm_rayon = ["wasm-bindgen", "js-sys", "console_error_panic_hook", "wasm-bindgen-rayon"]